--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
   <head>
-    <title>smudge.it</title>
+    <title>smudge</title>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&subset=latin' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="smudge.css" type="text/css" charset="utf-8" />
   </head>
